--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Žalioji Klinika</title>
     <link rel="stylesheet" href="/assets/css/styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.14.0/css/all.css"
       integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc"
       crossorigin="anonymous"/>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
 </head>
 <body>
 
@@ -40,6 +42,59 @@
         </div>
       </nav>
     
+      <div class="hero" id="home">
+        <div class="hero__container">
+          <h1 class="hero__heading">Kambarinių augalų priežiūra <span>be rūpesčių!</span></h1>
+          <p class="hero__description">Sveiki augalai <br>Laimingi šeimininkai</p>
+        </div>
+      </div>
+
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img src="/assets/images/woman-gardener-home-apron-gloves-with-growing-plants-house-balcony-watering-using-spray.jpg" alt="Purškimas nuo parazitų">
+        </div>
+        <div class="item1">
+          <img src="/assets/images/young-woman-cultivating-plants-home.jpg" alt="Augalų persodinimas">
+        </div>
+        <div class="item2">
+          <img src="/assets/images/crop-man-holding-plant-box.jpg" alt="Augalų perkraustymas">
+        </div>
+        <div class="item3">
+          <img src="/assets/images/room-decor-with-potted-monstera-plant.jpg" alt="Namų dizaino patarimai">
+        </div>
+        <div class="item4">
+          <img src="assets/images/beautiful-interior-design-with-plants (1).jpg" alt="Konsultacijos ir pagalba">
+        </div>
+      </div>
+
+
+
+
+      <div class="services" id="services">
+        <h1>Mūsų paslaugos</h1>
+        <div class="services__wrapper">
+          <div class="services__card">
+            <h2>Apsauga nuo parazitų</h2>
+            <p>Purškimas įvairiais pesticidais, gydymas indišku cinamonu bei buitiniais muilais</p>
+            <div class="services__btn"><button>Užsiregistruoti</button></div>
+          </div>
+          <div class="services__card">
+            <h2>Greitas persodinimas</h2>
+            <p>Jaunų, subrendusių ir visai senų augalų persodininimas jums nesitepant rankų</p>
+            <div class="services__btn"><button>Užsiregistruoti</button></div>
+          </div>
+          <div class="services__card">
+            <h2>Tręšimas</h2>
+            <p>Visus metus trunkantis tręšimas ir geriausių trąšų parinkimas individualiai</p>
+            <div class="services__btn"><button>Užsiregistruoti</button></div>
+          </div>
+          <div class="services__card">
+            <h2>Patalpų dekoras</h2>
+            <p>Tinkamiausių augalų parinkimas pagal kambario ar ofiso šviesą, langus bei orą</p>
+            <div class="services__btn"><button>Užsiregistruoti</button></div>
+          </div>
+        </div>
+      </div>
 
 
 
@@ -48,6 +103,52 @@
 
 
 
+      <div class="footer__container">
+        <div class="footer__links">
+          <div class="footer__link--wrapper">
+            <div class="footer__link--items">
+              <h2>About Us</h2>
+              <a href="/sign__up">Mūsų misija</a> <a href="/">Atsiliepimai</a>
+            </div>
+            <div class="footer__link--items">
+              <h2>Susisiekite su mumis</h2>
+              <a href="/">Kontaktai</a>
+              <a href="/">Miestai</a>
+            </div>
+          </div>
+            <div class="footer__link--items">
+              <h2>Socialiniai tinklai</h2>
+              <a href="https://www.instagram.com/">Instagram</a> <a href="https://www.facebook.com/">Facebook</a>
+              <a href="https://www.youtube.com/">Youtube</a> <a href="https://twitter.com/">Twitter</a>
+            </div>
+          </div>
+        </div>
+        <section class="social__media">
+          <div class="social__media--wrap">
+            <div class="footer__logo">
+              <a href="http://127.0.0.1:5500/#home" id="footer__logo">Žalioji Klinika</a>
+            </div>
+            <p class="website__rights">© Žalioji Klinika 2022.</p>
+            <div class="social__icons">
+              <a href="https://www.facebook.com/" class="social__icon--link" target="_blank"
+                ><i class="fab fa-facebook"></i
+              ></a>
+              <a href="https://www.instagram.com/" class="social__icon--link"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="https://www.youtube.com/" class="social__icon--link"
+                ><i class="fab fa-youtube"></i
+              ></a>
+              <a href="https://www.linkedin.com/" class="social__icon--link"
+                ><i class="fab fa-linkedin"></i
+              ></a>
+              <a href="https://twitter.com/" class="social__icon--link"
+                ><i class="fab fa-twitter"></i
+              ></a>
+            </div>
+          </div>
+        </section>
+      </div>
 
 
 
@@ -55,14 +156,9 @@
 
 
 
+<script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
-
-
-
-
-
-
-
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script src="/assets/js/app.js"></script>
 </body>
 </html>
